--- a/1.html
+++ b/1.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - html</title>
+  <title>WEB1 - HTML</title>
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">WEB</h1>
+  <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html">HTML</li>
-    <li><a href="2.html">CSS</li>
-    <li><a href="3.html">JavaScript</li>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
   </ol>
   <h2>HTML</h2>
   <p><a href="https://www.w3.org/TR/2011/WD-html5-20110405/" target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.
