--- a/2.html
+++ b/2.html
@@ -5,11 +5,11 @@
     <title>WEB1-CSS</title>
   </head>
   <body>
-    <h1><a href="index.html">WEB</h1>
+    <h1><a href="index.html">WEB</a></h1>
     <ol>
-      <li><a href="1.html">HTML</li>
-      <li><a href="2.html">CSS</li>
-      <li><a href="3.html">JavaScript</li>
+      <li><a href="1.html">HTML</a></li>
+      <li><a href="2.html">CSS</a></li>
+      <li><a href="3.html">JavaScript</a></li>
     </ol>
     <h2>CSS</h2>
     <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML or XML (including XML dialects such as SVG, MathML or XHTML).
