--- a/3.html
+++ b/3.html
@@ -3,9 +3,38 @@
   <head>
     <meta charset="utf-8">
     <title>WEB1-JavaScript</title>
+    <script>
+    function setColor(color){
+      var alist = document.querySelectorAll('a');
+      var i = 0;
+      while(i < alist.length){
+        alist[i].style.color = color;
+        i = i + 1;
+      }
+    }
+    function nightDayHandler(self){
+      var target = document.querySelector('body');
+      if(self.value == 'night'){
+        target.style.backgroundColor = 'black';
+        target.style.color = 'white';
+        self.value = 'day';
+
+        setColor('powderblue')
+      }else{
+        target.style.backgroundColor = 'white';
+        target.style.color = 'black';
+        self.value = 'night';
+
+        setColor('blue')
+      }
+    }
+    </script>
   </head>
   <body>
     <h1><a href="index.html">WEB</a></h1>
+    <input type="button" name="" value="night"onclick="
+    nightDayHandler(this);
+    ">
     <ol>
       <li><a href="1.html">HTML</a></li>
       <li><a href="2.html">CSS</a></li>
